--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             const canvas = document.getElementById('dvd');
             game = new Breakout(canvas, keyMap);
             
+            // update every 17 ms
             setInterval(update, 0);
         }
         
