--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 </head>
 
 <body>
+
+    <audio id = "soundeffect">
+        <source src="beepsound.mp3" type="audio/mpeg">
+    </audio>
+
     <p id="fps"></p>
     <canvas style="border: 1px solid black" id="dvd" />
 </body>
