updated paddle, working on ball bounce mechanics

--- a/index.html
+++ b/index.html
@@ -39,4 +39,9 @@
 
     <p id="fps"></p>
     <canvas style="border: 1px solid black" id="dvd" />
+    <p>
+        Extra Tasks Completed: Extra Task 1: Add bouncing sounds, 
+        Extra Task 2: Implement winning and losing.,
+        Extra Task 3: Add a welcome screen with instructions and a pause screen
+    </p>
 </body>
